--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,13 @@
             <artifactId>spring-security-core</artifactId>
             <version>5.4.2</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-devtools -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <version>2.5.5</version>
+        </dependency>
+
     </dependencies>
 
     <build>
